--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,9 +62,15 @@
             android:textSize="20sp"
             tools:ignore="VisualLintButtonSize" />
 
-        <EditText
+        <TextView
+            android:id="@+id/txtRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
+            android:clickable="true"
+            android:focusable="true"
+            android:linksClickable="true"
+
             android:layout_gravity="right"
             android:background="@null"
             android:layout_marginTop="20dp"
