--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,16 +63,17 @@
 
         <TextView
             android:id="@+id/txtRegister"
-            android:layout_width="wrap_content"
+            android:layout_width="288dp"
             android:layout_height="wrap_content"
+
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:background="@null"
 
             android:clickable="true"
             android:focusable="true"
             android:linksClickable="true"
-
-            android:layout_gravity="right"
-            android:background="@null"
-            android:layout_marginTop="20dp"
+            android:minHeight="48dp"
             android:text="No account? Register Now"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
