--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#6750a4</color>
+    <color name="green">#FF00FF00</color>
+    <color name="red">#FFFF0000</color>
 </resources>
