updated more functionalities

--- a/app/src/main/res/layout/activity_movie_quiz.xml
+++ b/app/src/main/res/layout/activity_movie_quiz.xml
@@ -100,5 +100,15 @@
             android:textSize="20sp"
             tools:ignore="VisualLintButtonSize" />
 
+        <Button
+            android:id="@+id/btnFinish"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="40dp"
+            android:text="Finish"
+            android:textSize="20sp"
+            android:visibility="gone"
+            tools:ignore="VisualLintButtonSize" />
+
     </LinearLayout>
 </LinearLayout>
