--- a/app/src/main/res/layout/activity_choose_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_quiz.xml
@@ -20,10 +20,10 @@
             android:id="@+id/txtUsernameChooseQuiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text=""
             android:textColor="@android:color/white"
             android:textSize="45sp"
-            android:textStyle="bold"
-            android:text="" />
+            android:textStyle="bold" />
 
         <!-- Message to instruct the user to choose a category -->
         <TextView
