--- a/app/src/main/res/layout/activity_choose_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_quiz.xml
@@ -20,12 +20,11 @@
             android:id="@+id/txtUsernameChooseQuiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Hi !"
             android:textColor="@android:color/white"
             android:textSize="45sp"
             android:textStyle="bold" />
 
-        <!-- Message to instruct the user to choose a category -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +33,6 @@
             android:text="@string/choose_your_category"
             android:layout_marginTop="20dp" />
 
-        <!-- Adding some spacing between the message and the buttons -->
         <Space
             android:layout_width="match_parent"
             android:layout_height="20dp" />
@@ -52,7 +50,6 @@
             android:elevation="5dp"
             tools:ignore="HardcodedText" />
 
-        <!-- History Quiz Button -->
         <Button
             android:id="@+id/btnHistoryQuiz"
             android:layout_width="match_parent"
@@ -64,7 +61,7 @@
             android:padding="10dp"
             android:elevation="5dp"/>
 
-        <!-- Movies Quiz Button -->
+
         <Button
             android:id="@+id/btnMoviesQuiz"
             android:layout_width="match_parent"
@@ -75,6 +72,6 @@
             android:padding="10dp"
             android:elevation="5dp"/>
 
-        <!-- Add more buttons for other quiz categories similarly -->
+
     </LinearLayout>
 </LinearLayout>
