--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -13,17 +13,16 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <!-- Display Username -->
         <TextView
             android:id="@+id/userNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="45sp"
+            android:text="Hi User!"
+            android:textSize="42sp"
             android:textStyle="bold"
-            android:text="Username: " />
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"/>
 
-        <!-- Score Display -->
         <TextView
             android:id="@+id/scoreTextView"
             android:layout_width="wrap_content"
