--- a/app/src/main/res/layout/activity_admin_login.xml
+++ b/app/src/main/res/layout/activity_admin_login.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/purple_gradient">
+    android:background="@drawable/purple_gradient"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/admin_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="Back to Login" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,10 +23,17 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Admin Login"
+            android:textSize="28sp"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="20dp"/>
+
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_weight="1"
             android:src="@drawable/loginuser" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,6 +66,7 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
@@ -61,33 +76,5 @@
             android:textSize="20sp"
             tools:ignore="VisualLintButtonSize" />
 
-        <TextView
-            android:id="@+id/txtRegister"
-            android:layout_width="288dp"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="right"
-            android:layout_marginTop="20dp"
-            android:background="@null"
-
-            android:clickable="true"
-            android:focusable="true"
-            android:linksClickable="true"
-            android:minHeight="48dp"
-            android:text="No account? Register Now"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
-
-        <Button
-            android:id="@+id/btnAdminLogin"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
-            android:text="Admin Login"
-            android:textSize="20sp"
-            android:background="@android:color/white"
-            android:textColor="@android:color/black" />
-
     </LinearLayout>
-
 </LinearLayout>
