--- a/app/src/main/res/layout/activity_choose_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_quiz.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/purple_gradient"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +19,7 @@
             android:id="@+id/txtUsernameChooseQuiz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hi !"
+            android:text="Welcome"
             android:textColor="@android:color/white"
             android:textSize="45sp"
             android:textStyle="bold" />
