--- a/app/src/main/res/layout/activity_choose_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_quiz.xml
@@ -67,7 +67,8 @@
         android:elevation="5dp"
         android:padding="10dp"
         android:text="Movies"
-        android:textColor="@android:color/holo_orange_light" />
+        android:textColor="@android:color/holo_orange_light"
+        tools:ignore="HardcodedText" />
 
   </LinearLayout>
 
@@ -82,7 +83,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="100dp"
-        android:text="Logout" />
+        android:text="Logout"
+        tools:ignore="HardcodedText" />
 
   </LinearLayout>
 
